--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-    <title>The Black Hairs</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <head>
+    <title>My Band Website</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <header>
-        <h1>The Black Hairs - Kevin, Daniel, Antonio</h1>
+      <h1>My Band Name</h1>
+      <nav>
+        <ul>
+          <li><a href="#bio1">Band Member 1</a></li>
+          <li><a href="#bio2">Band Member 2</a></li>
+          <li><a href="#bio3">Band Member 3</a></li>
+        </ul>
+      </nav>
     </header>
-<meta charset="UTF-8">
-<hr />
-<body>
-    <audio src="Rekt.m4a" controls>
-    <h1> About Us</h1>
-    <p> Test 123 </p>
-    <img src="Guy.jpg">
-
-</body>
+    <main>
+      <section id="bio1">
+        <h2>Band Member 1</h2>
+        <p>Bio for band member 1.</p>
+      </section>
+      <section id="bio2">
+        <h2>Band Member 2</h2>
+        <p>Bio for band member 2.</p>
+      </section>
+      <section id="bio3">
+        <h2>Band Member 3</h2>
+        <p>Bio for band member 3.</p>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; My Band Name 2023</p>
+    </footer>
+    <script src="app.js"></script>
+  </body>
 </html>
