--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Band Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="https://github.com/Daniel20040316/Daniel20040316.github.io/blob/main/style.css" href="style.css">
   </head>
   <body>
     <header>
